--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portifolio</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="imagens/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="imagens/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="imagens/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <title>Portfólio</title>
 </head>
+
 <body>
-    
+
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="imagens/background.jpg" alt="">
+            </div>
+            <div>
+                <div class="banner">
+                    <h1>Desenvolvedor Junior</h1>
+                    <p>Lucas de Souza Borgo</p>
+                    <button>Saiba mais</button>
+                </div>
+            </div>            
+        </header>
+    </div>
+
 </body>
+
 </html>
